<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.labartbeats.buddycast.MainActivity">
    <TextView
        android:id="@+id/main"
        android:text="@string/main_title"
        style="@style/BuddyHeader" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/main"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Only the first TextView is clickable.  In the real app this would get data from a database to populate this list.-->
                <TextView
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/marc_up"
                    android:id="@+id/marc_up"
                    style="@style/UserView" />
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/dummyuser"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_purple"
                    android:text="@string/lorenipsum"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/marc_down"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/superuser"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_purple"
                    android:text="@string/lorenmichaels"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/mjmike"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/daddyusef"/>
                <TextView
                    style="@style/UserView"
                    android:background="@android:color/holo_purple"
                    android:text="@string/larryipsum"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/media_player">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:text="@string/same_song_di"
            android:id="@+id/now_playing"
            style="@style/NowPlayingBar" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_player_description"
        android:layout_alignBottom="@id/media_player"
        android:gravity="center"
        android:textSize="18dp"/>
</RelativeLayout>
